[package]
name = "z3r-sramr"
version = "0.1.0"
authors = ["cassidoxa <cassidymoen@gmx.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/cassidoxa/RandoRank"
keywords= ["zelda", "randomizer", "sram", "alttp", "snes"]
license = "MIT"

[dependencies]
anyhow = "1.0"
byteorder = "1"
