[package]
name = "z3r-sramr"
version = "0.1.3"
authors = ["cassidoxa <cassidymoen@gmx.com>"]
edition = "2018"
readme = "README.md"
description = "An SRAM validator and parser for A Link to the Past Randomizer ROMs"
repository = "https://github.com/cassidoxa/z3r-sramr"
keywords= ["zelda", "randomizer", "sram", "alttp", "snes"]
license = "MIT"

[dependencies]
anyhow = "1.0"
byteorder = "1"
